--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
                 <li>
                     <article>
                         <h3>📝 Proyecto 4</h3>
-                        <p>Lista de tareas con HTML, CSS y JavaScript, permitiendo agregar y eliminar ítems.</p>
-                        <a href="proyectos/ej01_ListadeTareas/index.html">
+                        <p>Pomodoro con cuenta de progresoso y listado de tareas .</p>
+                        <a href="proyectos/Pomodoro/index.html">
                             <span>Ver proyecto</span>
                         </a>
                         
